[metadata]
name = wormhole
version = 0.1
summary = Hybrid Cloud Hyper vm service
description-file =
    README.rst

author = Huawei
home-page = http://www.huawei.com

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    wormhole

[files]
etc_files =
    etc/ = etc/init
    etc/ = etc/wormhole

bin_files =
    /usr/bin/ = bin/docker-daemon-start
    /usr/bin/ = bin/wormhole-api-watchdog

[entry_points]
console_scripts =
    wormhole-api = wormhole.server:main

