[metadata]
name = wormhole
version = 0.1
summary = Hybrid Cloud Hyper vm service
description-file =
    README.md

author = Huawei
home-page = http://www.huawei.com

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    wormhole

data_files =
    /etc/init/ = etc/init/*
    /etc/wormhole/ = etc/wormhole/*
    /usr/bin/ = bin/docker-daemon-start
    /usr/bin/ = bin/wormhole-api-watchdog

[entry_points]
console_scripts =
    wormhole-api = wormhole.server:main

