[metadata]
name = wormhole
version = 0.1
summary = Hybrid Cloud Hyper vm service
description-file =
    README.md

author = Huawei
home-page = http://www.huawei.com

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    wormhole

data_files =
    /etc/wormhole/ = etc/wormhole/*
    /var/lib/wormhole/bin = bin/*
    /var/lib/wormhole/ = etc/init/wormhole.service


[entry_points]
console_scripts =
    wormhole-api = wormhole.server:main

